# hometrack

./: .gitignore  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/src/: manage.py
backend/src/api/: api.py  models.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_images_items_images.py
backend/src/api/services/: images.py
backend/src/hometrack/: asgi.py  settings.py  urls.py  wsgi.py
